noinst_LTLIBRARIES = libjsoncpp.la

jsoncppincdir = External/jsoncpp
jsoncppinc_HEADERS= $(top_srcdir)/External/jsoncpp/json				\
					$(top_srcdir)/External/jsoncpp/src

libjsoncpp_la_SOURCES = \
						$(srcdir)/src/json_value.cpp				\
						$(srcdir)/src/json_writer.cpp				\
						$(srcdir)/src/json_reader.cpp
